test/errors/type/list/insert.yasl
[].insert(undef, 1, true)
